# env_backend

./: .env.sample  .gitignore  README.md  logging.conf  pyproject.toml
app/: config.py  cruds.py  db.py  main.py  models.py
app/config/: config.py
app/cruds/: cruds.py
app/db/: db.py
app/middlewares/: costom_middleware.py
app/models/: sensor_models.py
app/routers/: endpoints.py
misc/: atms3lite.py
tests/: test_app.py
