[project]
name = "env-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114.0",
    "psycopg[binary]>=3.2.1",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.34",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.6",
]
